Mod apmall_crawling

--- a/jupyter/apmall_crawling.ipynb
+++ b/jupyter/apmall_crawling.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,8 @@
     "driver.find_element_by_class_name('layer_close').click()\n",
     "\n",
     "driver.find_element_by_id('query_str').send_keys(brand_name)\n",
-    "driver.find_element_by_class_name('btn_search').click()"
+    "driver.find_element_by_class_name('btn_search').click()\n",
+    "time.sleep(1)"
    ]
   },
   {
@@ -89,12 +90,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [],
    "source": [
-    "prd_info = open(\"apmall_prd_info.txt\", \"a\")\n",
-    "prd_reviews = open(\"apmall_prd_reviews.txt\", \"a\")"
+    "prd_info = open(\"apmall_prd_info.txt\", \"w\")\n",
+    "prd_reviews = open(\"apmall_prd_reviews.txt\", \"w\")"
    ]
   },
   {
@@ -106,15 +107,404 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 315,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 끝\n",
+      "2 끝\n",
+      "3 끝\n",
+      "4 끝\n",
+      "5 끝\n",
+      "6 끝\n",
+      "7 끝\n",
+      "8 끝\n",
+      "9 끝\n",
+      "10 끝\n",
+      "11 끝\n",
+      "12 끝\n",
+      "13 끝\n",
+      "14 끝\n",
+      "15 끝\n",
+      "16 끝\n",
+      "17 끝\n",
+      "18 끝\n",
+      "19 끝\n",
+      "20 끝\n",
+      "21 끝\n",
+      "22 끝\n",
+      "23 끝\n",
+      "24 끝\n",
+      "25 끝\n",
+      "26 끝\n",
+      "27 끝\n",
+      "28 끝\n",
+      "29 끝\n",
+      "30 끝\n",
+      "31 끝\n",
+      "32 끝\n",
+      "33 끝\n",
+      "34 끝\n",
+      "35 끝\n",
+      "36 끝\n",
+      "37 끝\n",
+      "38 끝\n",
+      "39 끝\n",
+      "40 끝\n",
+      "41 끝\n",
+      "42 끝\n",
+      "43 끝\n",
+      "44 끝\n",
+      "45 끝\n",
+      "46 끝\n",
+      "47 끝\n",
+      "48 끝\n",
+      "49 끝\n",
+      "50 끝\n",
+      "51 끝\n",
+      "52 끝\n",
+      "53 끝\n",
+      "54 끝\n",
+      "55 끝\n",
+      "56 끝\n",
+      "57 끝\n",
+      "58 끝\n",
+      "59 끝\n",
+      "60 끝\n",
+      "61 끝\n",
+      "62 끝\n",
+      "63 끝\n",
+      "64 끝\n",
+      "65 끝\n",
+      "66 끝\n",
+      "67 끝\n",
+      "68 끝\n",
+      "69 끝\n",
+      "70 끝\n",
+      "71 끝\n",
+      "72 끝\n",
+      "73 끝\n",
+      "74 끝\n",
+      "75 끝\n",
+      "76 끝\n",
+      "77 끝\n",
+      "78 끝\n",
+      "79 끝\n",
+      "80 끝\n",
+      "81 끝\n",
+      "82 끝\n",
+      "83 끝\n",
+      "84 끝\n",
+      "85 끝\n",
+      "86 끝\n",
+      "87 끝\n",
+      "88 끝\n",
+      "89 끝\n",
+      "90 끝\n",
+      "91 끝\n",
+      "92 끝\n",
+      "93 끝\n",
+      "94 끝\n",
+      "95 끝\n",
+      "96 끝\n",
+      "97 끝\n",
+      "98 끝\n",
+      "99 끝\n",
+      "100 끝\n",
+      "101 끝\n",
+      "102 끝\n",
+      "103 끝\n",
+      "104 끝\n",
+      "105 끝\n",
+      "106 끝\n",
+      "107 끝\n",
+      "108 끝\n",
+      "109 끝\n",
+      "110 끝\n",
+      "111 끝\n",
+      "112 끝\n",
+      "113 끝\n",
+      "114 끝\n",
+      "115 끝\n",
+      "116 끝\n",
+      "117 끝\n",
+      "118 끝\n",
+      "119 끝\n",
+      "120 끝\n",
+      "121 끝\n",
+      "122 끝\n",
+      "123 끝\n",
+      "124 끝\n",
+      "125 끝\n",
+      "126 끝\n",
+      "127 끝\n",
+      "128 끝\n",
+      "129 끝\n",
+      "130 끝\n",
+      "131 끝\n",
+      "132 끝\n",
+      "133 끝\n",
+      "134 끝\n",
+      "135 끝\n",
+      "136 끝\n",
+      "137 끝\n",
+      "138 끝\n",
+      "139 끝\n",
+      "140 끝\n",
+      "141 끝\n",
+      "142 끝\n",
+      "143 끝\n",
+      "144 끝\n",
+      "145 끝\n",
+      "146 끝\n",
+      "147 끝\n",
+      "148 끝\n",
+      "149 끝\n",
+      "150 끝\n",
+      "151 끝\n",
+      "152 끝\n",
+      "153 끝\n",
+      "154 끝\n",
+      "155 끝\n",
+      "156 끝\n",
+      "157 끝\n",
+      "158 끝\n",
+      "159 끝\n",
+      "160 끝\n",
+      "161 끝\n",
+      "162 끝\n",
+      "163 끝\n",
+      "164 끝\n",
+      "165 끝\n",
+      "166 끝\n",
+      "167 끝\n",
+      "168 끝\n",
+      "169 끝\n",
+      "170 끝\n",
+      "171 끝\n",
+      "172 끝\n",
+      "173 끝\n",
+      "174 끝\n",
+      "175 끝\n",
+      "176 끝\n",
+      "177 끝\n",
+      "178 끝\n",
+      "179 끝\n",
+      "180 끝\n",
+      "181 끝\n",
+      "182 끝\n",
+      "183 끝\n",
+      "184 끝\n",
+      "185 끝\n",
+      "186 끝\n",
+      "187 끝\n",
+      "188 끝\n",
+      "189 끝\n",
+      "190 끝\n",
+      "191 끝\n",
+      "192 끝\n",
+      "193 끝\n",
+      "194 끝\n",
+      "195 끝\n",
+      "196 끝\n",
+      "197 끝\n",
+      "198 끝\n",
+      "199 끝\n",
+      "200 끝\n",
+      "201 끝\n",
+      "202 끝\n",
+      "203 끝\n",
+      "204 끝\n",
+      "205 끝\n",
+      "206 끝\n",
+      "207 끝\n",
+      "208 끝\n",
+      "209 끝\n",
+      "210 끝\n",
+      "211 끝\n",
+      "212 끝\n",
+      "213 끝\n",
+      "214 끝\n",
+      "215 끝\n",
+      "216 끝\n",
+      "217 끝\n",
+      "218 끝\n",
+      "219 끝\n",
+      "220 끝\n",
+      "221 끝\n",
+      "222 끝\n",
+      "223 끝\n",
+      "224 끝\n",
+      "225 끝\n",
+      "226 끝\n",
+      "227 끝\n",
+      "228 끝\n",
+      "229 끝\n",
+      "230 끝\n",
+      "231 끝\n",
+      "232 끝\n",
+      "233 끝\n",
+      "234 끝\n",
+      "235 끝\n",
+      "236 끝\n",
+      "237 끝\n",
+      "238 끝\n",
+      "239 끝\n",
+      "240 끝\n",
+      "241 끝\n",
+      "242 끝\n",
+      "243 끝\n",
+      "244 끝\n",
+      "245 끝\n",
+      "246 끝\n",
+      "247 끝\n",
+      "248 끝\n",
+      "249 끝\n",
+      "250 끝\n",
+      "251 끝\n",
+      "252 끝\n",
+      "253 끝\n",
+      "254 끝\n",
+      "255 끝\n",
+      "256 끝\n",
+      "257 끝\n",
+      "258 끝\n",
+      "259 끝\n",
+      "260 끝\n",
+      "261 끝\n",
+      "262 끝\n",
+      "263 끝\n",
+      "264 끝\n",
+      "265 끝\n",
+      "266 끝\n",
+      "267 끝\n",
+      "268 끝\n",
+      "269 끝\n",
+      "270 끝\n",
+      "271 끝\n",
+      "272 끝\n",
+      "273 끝\n",
+      "274 끝\n",
+      "275 끝\n",
+      "276 끝\n",
+      "277 끝\n",
+      "278 끝\n",
+      "279 끝\n",
+      "280 끝\n",
+      "281 끝\n",
+      "282 끝\n",
+      "283 끝\n",
+      "284 끝\n",
+      "285 끝\n",
+      "286 끝\n",
+      "287 끝\n",
+      "288 끝\n",
+      "289 끝\n",
+      "290 끝\n",
+      "291 끝\n",
+      "292 끝\n",
+      "293 끝\n",
+      "294 끝\n",
+      "295 끝\n",
+      "296 끝\n",
+      "297 끝\n",
+      "298 끝\n",
+      "299 끝\n",
+      "300 끝\n",
+      "301 끝\n",
+      "302 끝\n",
+      "303 끝\n",
+      "304 끝\n",
+      "305 끝\n",
+      "306 끝\n",
+      "307 끝\n",
+      "308 끝\n",
+      "309 끝\n",
+      "310 끝\n",
+      "311 끝\n",
+      "312 끝\n",
+      "313 끝\n",
+      "314 끝\n",
+      "315 끝\n",
+      "316 끝\n",
+      "317 끝\n",
+      "318 끝\n",
+      "319 끝\n",
+      "320 끝\n",
+      "321 끝\n",
+      "322 끝\n",
+      "323 끝\n",
+      "324 끝\n",
+      "325 끝\n",
+      "326 끝\n",
+      "327 끝\n",
+      "328 끝\n",
+      "329 끝\n",
+      "330 끝\n",
+      "331 끝\n",
+      "332 끝\n",
+      "333 끝\n",
+      "334 끝\n",
+      "335 끝\n",
+      "336 끝\n",
+      "337 끝\n",
+      "338 끝\n",
+      "339 끝\n",
+      "340 끝\n",
+      "341 끝\n",
+      "342 끝\n",
+      "343 끝\n",
+      "344 끝\n",
+      "345 끝\n",
+      "346 끝\n",
+      "347 끝\n",
+      "348 끝\n",
+      "349 끝\n",
+      "350 끝\n",
+      "351 끝\n",
+      "352 끝\n",
+      "353 끝\n",
+      "354 끝\n",
+      "355 끝\n",
+      "356 끝\n",
+      "357 끝\n",
+      "358 끝\n",
+      "359 끝\n",
+      "360 끝\n",
+      "361 끝\n",
+      "362 끝\n",
+      "363 끝\n",
+      "364 끝\n",
+      "365 끝\n",
+      "366 끝\n",
+      "367 끝\n",
+      "368 끝\n",
+      "369 끝\n",
+      "370 끝\n",
+      "371 끝\n",
+      "372 끝\n",
+      "373 끝\n",
+      "374 끝\n",
+      "375 끝\n",
+      "376 끝\n",
+      "377 끝\n",
+      "378 끝\n",
+      "379 끝\n"
+     ]
+    }
+   ],
    "source": [
     "k = 1\n",
     "for i in obj_id:\n",
+    "    \n",
     "    ########## 얻은 제품 id로 각 제품 url에 접속 ##########\n",
     "    driver.get(ap_url + '/kr/ko/product/detail?onlineProdSn=' + i)\n",
-    "    time.sleep(1)\n",
+    "    time.sleep(0.5)\n",
     "    \n",
     "    ########## name, price, review count, point ##########\n",
     "    prd_name = driver.find_element_by_class_name('product_name').text\n",
@@ -123,26 +513,40 @@
     "    point = driver.find_element_by_css_selector('div > div.detail_head > div > div.product_info > div.purchase_benefit > p').text\n",
     "    \n",
     "    shipping_btn = driver.find_element_by_css_selector('#ap_container > div > div.detail_head > div > div.product_info > div.purchase_benefit > div > dl:nth-child(1) > dt > button').click()\n",
+    "    time.sleep(0.1)\n",
     "    shipping = driver.find_element_by_css_selector('#ap_container > div > div.detail_head > div > div.product_info > div.purchase_benefit > div > dl:nth-child(1) > dd > div > p').text\n",
     "    \n",
     "    purchase_benefit_btn = driver.find_element_by_css_selector('#ap_container > div > div.detail_head > div > div.product_info > div.purchase_benefit > div > dl:nth-child(2) > dt > button').click()\n",
+    "    time.sleep(0.1)\n",
     "    purchase_benefits = driver.find_elements_by_css_selector('#ap_container > div > div.detail_head > div > div.product_info > div.purchase_benefit > div > dl:nth-child(2) > dd > div > ul > li')\n",
     "    benefit_total = ''\n",
     "    for benefit in purchase_benefits:\n",
     "        span = benefit.find_element_by_css_selector('span').text\n",
     "        em = '(' + benefit.find_element_by_css_selector('em').text + ')'\n",
     "        benefit_total += span + em + \" \"\n",
+    "   \n",
+    "\n",
+    "    ########## 리뷰 200개 이상이면 200으로 표현 ##########\n",
+    "    if ',' in review_count or int(review_count) > 200:\n",
+    "        review_count = '200'\n",
     "    \n",
     "\n",
     "    \n",
-    "    ########## 모든 리뷰가 보일 때까지 '더보기' 클릭 ##########\n",
+    "    ########## 리뷰 200개가 보일 때까지 '더보기' 클릭 ##########\n",
     "    review_click = driver.find_element_by_css_selector('#ap_container > div > div.detail_body.ui_tab.＠tabs-apply > div.tab_menu > ul > li:nth-child(2) > button').click()\n",
     "    try:\n",
-    "        while True:\n",
-    "            driver.find_element_by_class_name('btn_list_more').click()\n",
-    "            time.sleep(1)\n",
+    "        if int(review_count) < 200:\n",
+    "            while True:\n",
+    "                driver.find_element_by_class_name('btn_list_more').click()\n",
+    "                time.sleep(1)\n",
+    "        else:\n",
+    "            num = 0\n",
+    "            while num < 20:\n",
+    "                driver.find_element_by_class_name('btn_list_more').click()\n",
+    "                time.sleep(1)\n",
+    "                num += 1\n",
     "    except:\n",
-    "        print(\"-\")\n",
+    "        pass\n",
     "    \n",
     "    \n",
     "    ########## date, rating, user_id, text ##########\n",
@@ -160,22 +564,22 @@
     "    prd_reviews.write(\"\\n\")    \n",
     "    \n",
     "    if review_count == '0':\n",
-    "        rating_avg = '0.00'\n",
+    "        rating_avg = '    '\n",
     "    else:\n",
     "        rating_avg = str(\"%.2f\" % (total_rating / int(review_count)))\n",
-    "    \n",
-    "    prd_info.write(str(k) + \" | \" + prd_name + \" | \" + prd_price + \" | \" + rating_avg + \" | \" + point[:9] + \" | \" + shipping_cond[9:28] + \" | \" + benefit_total + \"\\n\")\n",
     "\n",
+    "            \n",
+    "    prd_info.write(str(k) + \" | \" + prd_name + \" | \" + prd_price + \" | \" + review_count + \" | \" + rating_avg + \" | \" + point[:9] + \" | \" + shipping_cond[9:28] + \" | \" + benefit_total + \"\\n\")\n",
+    "    print(str(k) + \" 끝\")\n",
     "    k += 1\n",
-    "    \n",
+    "\n",
     "prd_info.close()\n",
-    "prd_reviews.close()\n",
-    "    "
+    "prd_reviews.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [],
    "source": [
